# selfconnect

./: .env.approval.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LOG.md  PARKED.md  PRODUCTION_REVIEW.md  README.md  ROADMAP_V0.12.md  SECURITY.md  SESSION_STATE.md  TASK_REGISTRY.md  WHY.md  _close_notepads.py  _draw_art.py  _fixture_window.py  _live_spawn_test.py  _save_notepads.py  _scan_notepads.py  _spawn_claude.py  _spawn_codex.py  _win32_abi.py  action_scheduler.py  add_return_protocol.py  antigravity_controller.py  approval_partner.py  approval_telegram.py  approve_codex.py  approve_gemini.py  ask_mesh_response.py  b_reply.py  b_roundtrip.py  b_send.py  b_watcher.py  bench_char_delay.py  bestbuy_to_pbp.py  brief_b.py  brief_gemini.py  briefing_b.txt  (+88 more)
.github/workflows/: ci.yml  restricted-scale-producer.yml
claudego/: __init__.py  __main__.py  dashboard.py  notifier.py  scanner.py  tray.py
claudego/static/: index.html
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT_2026-06-20.md  ARCHITECTURE_CONSENSUS_2026-06-20.md  AWS_AI_TO_AI_EVIDENCE_INDEX.md  BROWSER_LOCAL_PROOF.md  CHANNEL_ROUTER_COMPOSITION_PROOF.md  CLAIM_EVIDENCE_MATRIX.md  CONSOLE_INPUT_TRANSPORT_PROOF.md  DEPLOY.md  FABRIC_V0_BENCHMARK_SPEC.md  FABRIC_V2_BENCHMARK_RESULTS.md  FABRIC_V2_BUILD_TARGETS.md  FABRIC_V2_REAL_5_AGENT_BASELINE.md  FABRIC_V2_REAL_LADDER_PROTOCOL.md  FABRIC_V2_REAL_LADDER_RESULTS.md  FABRIC_V2_STRESS_PROTOCOL.md  FLEET_AUTO_HALT_PROTOCOL.md  LANCELOT_UAB_COMPETITIVE_DEFENSE.md  LOCAL_MODEL_SELFCONNECT_PROOF.md  LOCAL_MODEL_SMART_WRAPPER.md  OPEN_DEFENSE_BUILD_TARGETS.md  ORCHESTRATION.md  PATENT_DESIGN_AROUND_DEFENSE.md  PATENT_EVIDENCE_FREEZE_2026-06-20.md  PATENT_PRIOR_ART_SNAPSHOT.md  PIPE_ROLE_LEASE_PROOF.md  PROVEN_VS_UNTESTED.md  RESTRICTED_SCALE_PRODUCER.md  SELFCONNECT_FAILURE_LEARNING_LEDGER.md  SELFCONNECT_PRODUCT_BOUNDARIES.md  SELFCONNECT_TESTING_STATUS_2026-06-21.md  SPARK_LINUX_SELFCONNECT_CHANNELS.md  TPM_PLATFORM_ATTESTATION.md  UIA_ECHO_FILTER_TERMCONTROL.md  WIN32_HARDENING_LOCAL_PLAN.md  WINDOWS_TERMINAL_ACTIVE_TAB_GUARD.md  ai-to-ai-chat-log.md  frp-spec-v0.1.md
docs/daily/: 2026-06-16-win32-hardening-and-patent-notes.md
examples/: send_string_demo.py
experiments/fabric_v2/: real_agent_baseline.py  restricted_scale_producer.py
experiments/fabric_v2/results/: SC_FABRIC_SERVICE_20260621_1135_redacted.json  baseline_5agent_fabric_v2_frame_mailbox.json  baseline_5agent_fabric_v2_service_transport.json  fabric_v2_5agent_baseline_redacted.json  fabric_v2_host_selftest_20260621_074925_redacted.json  fabric_v2_overlapped_pipe_selftest_20260621_080840_redacted.json  fabric_v2_router_restart_selftest_20260621_081434_redacted.json  fabric_v2_router_state_20260621_081434_redacted.json  fabric_v2_scm_live_20260720_redacted.json  fabric_v2_selftest_20260621_073951_redacted.json  fabric_v2_service_selftest_20260621_113419_redacted.json
experiments/win32_probe/: CAPABILITY_BACKLOG.md  SERVICE_SID_DAEMON.md  browser_local_proof.py  chained_channel.py  channel_router_composition_probe.py  console_input_transport_probe.py  etw_provider.py  local_model_action_agent_probe.py  local_model_claude_exchange_probe.py  local_model_selfconnect_probe.py  local_model_spawn_claude_probe.py  local_model_visible_action_demo.py  local_model_visible_repair_demo.py  pipe_role_lease_probe.py  runtime_sid_probe.py  service_sid_probe.py  terminal_active_tab_guard_probe.py  uia_echo_filter_probe.py
observer_logs/: b_patent_summary.md  events_2026-05-07.md  github_todo.md  mesh_health.md
proofs/: audit_log_test.jsonl  benchmark_20260430_204224.json  briefing_successor_B_1777676098.txt  checkpoint_A_s10_browser_automation.json  checkpoint_A_s8_final.json  checkpoint_A_s9_final.json
release/: claims.json  core_invariants.json
release/evidence/: enterprise_test_20260709.json
runbooks/: PARKED.md  PROCESS_TIMELINE.md  README.md  agent_launch_registry.md  capture_chrome_window.md  cross_machine_mesh.md  enter_claude_tui.md  fabric_v2_windows_service.md  first_wake_selfconnect.md  fix_antigravity_gemini.md  inject_webview2_chat.md  mesh_agent_bootstrap_and_replacement.md  peer_approval_check.md  spawn-and-operate-local-agentpy-mesh-agent-agent-b.md  spawn_claude_terminal.md  submit-pending-input-in-claude-code-tui-via-wm-char-0x0d.md  type_into_claude_ai_chrome.md
selfconnect_plugins/: README.md  _example_plugin.py
services/: __init__.py  agent_service.py  audio_service.py  pathbook_service.py  policy_service.py
skills/selfconnect-win32/: SKILL.md
skills/selfconnect-win32/agents/: openai.yaml
tests/: conftest.py  test_action_queue.py  test_action_scheduler.py  test_antigravity_controller.py  test_approval_partner.py  test_browser_local_proof.py  test_channel_router_composition.py  test_checkpoint.py  test_claudego_dashboard.py  test_claudego_scanner.py  test_console_input_transport_probe.py  test_console_io.py  test_domain2_adversarial.py  test_domain3_audit.py  test_event_bus.py  test_fabric_host.py  test_fabric_router.py  test_fabric_service.py  test_fabric_v0_benchmark.py  test_fabric_v2.py  test_fabric_windows_svc.py  test_fleet_guard.py  test_guarded_submit.py  test_guarded_submit_win32_primitives.py  test_guarded_submit_windows.py  test_local_model_action_agent.py  test_local_model_role.py  test_main_logging.py  test_mesh_envelope_wiring.py  test_mesh_lease.py  test_mesh_scrubber.py  test_observer.py  test_package_adapters.py  test_plugin_registry.py  test_real_agent_baseline.py  test_release_gate.py  test_replay.py  test_restricted_scale_producer.py  test_sc_enterprise.py  test_sc_envelope.py  (+13 more)
tools/: __init__.py  install_test_deps.ps1  release_gate.py
vision_agent_design/selfconnect-vision-agent/: README.md
vision_server/: __init__.py  config.py  main.py
vision_server/models/: schemas.py
vision_server/routers/: actions.py  capture.py  detections.py  events.py  health.py  macros.py  search.py  vl.py  windows.py
vision_server/services/: action_queue.py  capture_service.py  detection_service.py  event_bus.py  health_monitor.py  macro_recorder.py  vl_service.py
(+24 files in other folders)
