[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfconnect"
version = "0.6.0"
description = "OS-native bridge between AI agents and Windows desktop apps — PostMessage + PrintWindow, no browser, no UIA dependency."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "automation", "windows", "desktop", "win32", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Desktop Environment",
]
dependencies = [
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
uia = [
    "pywinauto>=0.6.8",
]
full = [
    "pywinauto>=0.6.8",
    "comtypes>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/rblake2320/selfconnect"
Repository = "https://github.com/rblake2320/selfconnect"

[tool.hatch.build.targets.wheel]
# Single-module package — no package directory needed
include = ["self_connect.py"]

[tool.pytest.ini_options]
testpaths = ["test_self_connect.py"]
