[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfconnect"
version = "0.9.0"
description = "OS-native Win32 bridge for AI agent orchestration — PostMessage, PrintWindow, UIA, cross-machine mesh, Telegram approvals."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "automation", "windows", "desktop", "win32", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Desktop Environment",
]
dependencies = [
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
uia = [
    "pywinauto>=0.6.8",
]
telegram = [
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
full = [
    "pywinauto>=0.6.8",
    "comtypes>=1.4.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
]

[project.urls]
Homepage = "https://github.com/rblake2320/selfconnect"
Repository = "https://github.com/rblake2320/selfconnect"

[tool.hatch.build.targets.wheel]
# Single-module package — no package directory needed
include = ["self_connect.py"]

[tool.pytest.ini_options]
testpaths = ["tests", "test_self_connect.py"]
